--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,37 @@ video, input {
     max-width: 1800px;
 }
 
+#videoContainer{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+#smallPreviewHiddenCover{
+    content: '';
+    display: none;
+    height:100%;
+    background-color: rgb(199, 199, 199);
+}
+
+#smallPreviewContainer{
+    display: flex;
+    flex-direction: column;
+}
+
+#sidebar {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    min-width: 40px;
+    min-height: 800px;
+}
+
 input {
     width: 90%;
 }
