--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,41 @@ body{
     margin: 0;
 }
 
+#videoParent {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#playbackcapture {
+    position: absolute;
+    visibility: hidden;
+    top: 0;
+    left: 0;
+    padding: 0;
+    margin: 0;
+    z-index: 999;
+    outline: 2px solid rgba(0,196,255,64);
+    outline-offset: -2px;
+    flex-grow: 0;
+}
+
+
+
 video, input {
     display: block;
-
+}
+#videoele {
+    padding: 0;
+    margin: 0;
 }
 
-video {
+#videoele, #playbackcapture {
     max-width: 85vw;
     max-height: 70vh;
-    padding-right: 5vw;
 }
-
 
 #videoContainer{
     margin: 0;
@@ -27,7 +51,7 @@ video {
 #videoContainer #sidebar {
     flex-grow: 0;
 }
-#videoContainer video {
+#videoParent #videoele, #videoParent #playbackcapture {
     flex-grow: 1;
 }
 
